--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "nodemailer": "^6.9.8",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -47,6 +49,8 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.14",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
